# Licenser

./: .licenserConfig  README.md  pyproject.toml
example/: .example.licenserConfig  .license_header  .licenserConfig  1.licenserConfig  LICENSE  a.licenserConfig  pyproject.toml  test.py
example/a/: d.c  e.py
example/a/aw/: d.py
src/licenser/: __init__.py  cli.py  config.py  constants.py  interface.py  services.py  utils.py
src/licenser/templates/: licenses_index.json
tests/: example.py  run.py
