[project]
name = "Licenser"
version = "0.1.0"
description = "Command Line tool to generate license files"
authors = [
    {name = "Amulya Paritosh", email = "amulya1171@gmail.com"},
]
dependencies = [
    "argcomplete>=3.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project.scripts]
licenser = "licenser:main"

[tool.pdm]
distribution = true
