# %license_header%
# SPDX: BSD-3-Clause
# 
# This is a license header for the example project
# ________________________________________________
# 
# This is a Toy project
# by John
# ________________________________________________
# # %license_header%
[project]
name = "Example"
version = "0.1.0"
description = "example for Command Line tool to generate license files"
authors = [
    {name = "John", email = "john@test.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true